Added MIT license! Cause that is cool!

--- a/composer.json
+++ b/composer.json
@@ -20,5 +20,6 @@
             "Rtablada\\FlatDocs": "src/"
         }
     },
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
+    "license": "MIT"
 }
